# docs/swagger.yaml
@@ -1,36 +1,65 @@
 basePath: /
 definitions:
-  handlers.InvoiceRequest:
+  handlers.ErrorResponse:
+    properties:
+      message:
+        type: string
     type: object
-  handlers.InvoiceResponse:
+  models.SubscriptionType:
+    type: object
+  payment.InvoiceRequest:
+    type: object
+  payment.InvoiceResponse:
     properties:
       paymentUrl:
         example: https://api.monobank.ua
         type: string
     type: object
-  handlers.Response:
+  subscription.CreateFreeTrialRequestBody:
     properties:
-      data: {}
       message:
+        properties:
+          data:
+            items:
+              type: integer
+            type: array
+        type: object
+      subscription:
         type: string
     type: object
-  models.SubscriptionDuration:
+  subscription.CreateSubscriptionRequestBody:
+    properties:
+      customerUuid:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+      subscriptionDuration:
+        example: ""
+        type: string
+      subscriptionType:
+        example: business
+        type: string
     type: object
-  models.SubscriptionType:
-    type: object
-  models.Subscription:
+  subscription.CreateSubscriptionResponseBody:
     properties:
       accessTime:
         type: string
-      createdAt:
+      customerUuid:
+        type: string
+      subscriptionDuration:
+        type: string
+      subscriptionType:
+        type: string
+    type: object
+  subscription.GetSubscriptionResponse:
+    properties:
+      accessTime:
+        example: "2021-09-01T00:00:00Z"
         type: string
       duration:
-        $ref: '#/definitions/models.SubscriptionDuration'
-      kind:
-        $ref: '#/definitions/models.SubscriptionType'
-      updatedAt:
+        example: 12m
         type: string
-      userUuid:
+      name:
+        example: business
         type: string
     type: object
 host: gw.verifire.dev/subs
@@ -39,11 +68,8 @@ info:
     name: Artem Kostenko
     url: https://github.com/aerosystems
   description: A part of microservice infrastructure, who responsible for user subscriptions
-  license:
-    name: Apache 2.0
-    url: https://www.apache.org/licenses/LICENSE-2.0.html
   title: Subscription Service
-  version: 2.0.0
+  version: 1.0.0
 paths:
   /v1/invoices/{payment_method}:
     post:
@@ -63,37 +89,32 @@ paths:
         name: invoice
         required: true
         schema:
-          $ref: '#/definitions/handlers.InvoiceRequest'
+          $ref: '#/definitions/payment.InvoiceRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            allOf:
-            - $ref: '#/definitions/handlers.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/handlers.InvoiceResponse'
-              type: object
+            $ref: '#/definitions/payment.InvoiceResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "422":
           description: Unprocessable Entity
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
       security:
-      - ApiKeyAuth: []
+      - ServiceApiKeyAuth: []
       summary: Create invoice
       tags:
       - invoices
@@ -108,20 +129,15 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/handlers.Response'
-            - properties:
-                data:
-                  additionalProperties:
-                    additionalProperties:
-                      type: integer
-                    type: object
-                  type: object
+            additionalProperties:
+              additionalProperties:
+                type: integer
               type: object
+            type: object
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Get prices
       tags:
       - prices
@@ -136,23 +152,147 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/handlers.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/models.Subscription'
-              type: object
+            $ref: '#/definitions/subscription.GetSubscriptionResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.Response'
+            $ref: '#/definitions/handlers.ErrorResponse'
       security:
-      - ApiKeyAuth: []
+      - ServiceApiKeyAuth: []
       summary: Get subscriptions
+      tags:
+      - subscriptions
+  /v1/subscriptions/{subscriptionId}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete subscription
+      parameters:
+      - description: Subscription ID
+        in: path
+        name: subscriptionId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "501":
+          description: Not Implemented
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete subscription
+      tags:
+      - subscriptions
+    put:
+      consumes:
+      - application/json
+      description: Update subscription
+      parameters:
+      - description: Subscription ID
+        in: path
+        name: subscriptionId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "501":
+          description: Not Implemented
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update subscription
+      tags:
+      - subscriptions
+  /v1/subscriptions/create:
+    post:
+      consumes:
+      - application/json
+      description: Create subscription
+      parameters:
+      - description: Create subscription
+        in: body
+        name: raw
+        required: true
+        schema:
+          $ref: '#/definitions/subscription.CreateSubscriptionRequestBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/subscription.CreateSubscriptionResponseBody'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create subscription
+      tags:
+      - subscriptions
+  /v1/subscriptions/create-free-trial:
+    post:
+      consumes:
+      - application/json
+      description: Create free trial
+      parameters:
+      - description: Create free trial
+        in: body
+        name: raw
+        required: true
+        schema:
+          $ref: '#/definitions/subscription.CreateFreeTrialRequestBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/subscription.CreateSubscriptionResponseBody'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create free trial
       tags:
       - subscriptions
 schemes:
