# internal/presenters/http/handlers/base.go
@@ -21,3 +21,7 @@ func NewBaseHandler(
 		validator: validator.Validate{},
 	}
 }
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
