# internal/presenters/http/handlers/subscription/delete.go
@@ -13,7 +13,7 @@ import (
 // @Produce application/json
 // @Security BearerAuth
 // @Param subscriptionId path string true "Subscription ID"
-// @Failure 501 {object} echo.HTTPError
+// @Failure 501 {object} handlers.ErrorResponse
 // @Router /v1/subscriptions/{subscriptionId} [delete]
 func (sh Handler) DeleteSubscription(c echo.Context) error {
 	return echo.NewHTTPError(http.StatusNotImplemented, "not implemented")
