# internal/presenters/http/handlers/subscription/update.go
@@ -13,7 +13,7 @@ import (
 // @Produce application/json
 // @Security BearerAuth
 // @Param subscriptionId path string true "Subscription ID"
-// @Failure 501 {object} echo.HTTPError
+// @Failure 501 {object} handlers.ErrorResponse
 // @Router /v1/subscriptions/{subscriptionId} [put]
 func (sh Handler) UpdateSubscription(c echo.Context) error {
 	return echo.NewHTTPError(http.StatusNotImplemented, "not implemented")
